Ran Cleanup. Time taken in seconds: 616